<resources>
    <string name="app_name">Variadís</string>
    <string name="variadis">Variadís</string>
    <string name="app_slogan">Mets toi au vert dans la ville rose ! </string>
    <string name="empty">Ton arboretum est encore vide ! Reviens quand tu auras trouvé ton premier arbre.</string>
    <string name="my_herbarium">Mon Arboretum</string>
    <string name="empty_herbarium">Arboretum vide</string>
    <string name="title_activity_maps">Map</string>
    <string name="profil">Profil</string>
    <string name="herbier">Arboretum</string>
    <string name="defis">Défis</string>
    <string name="vegetal">Arbre</string>
    <string name="nom_vegetal">Nom de l\'arbre</string>
    <string name="last_find">Dernière découverte</string>
    <string name="infos">Infos</string>
    <string name="mon_profil">Mon profil</string>
    <string name="nom_pseudo">Entrer un pseudo</string>
    <string name="nb_points">Points : </string>
    <string name="find_vegetal">Tu viens de trouver un nouvel arbre !</string>
    <string name="name_vegetal">Nom de l\'arbre</string>
    <string name="acces">Voir la fiche</string>
    <string name="thanks_no">Non merci</string>
    <string name="congrats">Félicitations !</string>
    <string name="ajoute_ta_photo_ici">Ajoute ta photo ici !</string>
    <string name="email">Email</string>
    <string name="go">GO</string>
    <string name="gps_disabled_title">Le service de localisation est désactivé</string>
    <string name="gps_disabled_message">Voulez-vous l\'activer maintenant ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="visualiser_sur_la_carte">Visualiser</string>
    <string name="nom_de_la_plante_trouver">Nom de la plante à trouver</string>
    <string name="nouveau_d_fi">Nouveau défi</string>
    <string name="minimum_mot_de_passe">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="oublie_pass">Mot de passe oublié ?</string>
    <string name="entrer_email">Entrer une adresse email</string>
    <string name="entrer_mot_de_passe">Entrer un mot de passe</string>
    <string name="mauvaise_authentification">Mauvaise authentification</string>
    <string name="quitter">Quitter</string>
    <string name="voir_la_fiche">Voir la fiche</string>
    <string name="carte">Carte</string>
    <string name="mauvais_mdp">Mauvais mot de passe</string>
    <string name="mail_envoye">Mail envoyé</string>
    <string name="mail_inconnu">Mail inconnu</string>
    <string name="envoie_mdp">Envoyer nouveau mot de passe</string>
    <string name="retour">Retour</string>
    <string name="inscription">Inscription</string>
    <string name="deja_inscrit">Déjà inscrit ?</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="visualiser_vegetal">Visualiser sur la carte</string>
    <string name="fermer_popup">Fermer</string>
    <string name="ok">OK</string>
    <string name="back_again">Appuie encore pour quitter l\'app</string>

    <string name="text_infos">Variadís est un jeu qui prend le pari de faire découvrir de façon ludique,
        \nla flore qui vous entoure :
        \npas besoin d’habiter à la campagne pour cela, le centre-ville de Toulouse regorge d\'arbres !
        \n\nChaque jour, des défis à réaliser :
        \nouvrez votre carte et trouvez un arbre précis près de vous.
        \nGagnez des points pour augmenter votre rang !
        \n\nDeviendrez-vous le premier Écowild parmi vos amis ?</string>
    <string name="pseudo_enregistre">Pseudo enregistré</string>
    <string name="no_pts">0</string>
    <string name="confirm_quit">Etes-vous sûr de vouloir quitter l\'application ?</string>
    <string name="deco">Déconnection</string>
    <string name="confirm_deco">Etes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="add_image">Ajout d\'une image</string>
    <string name="select_resource">Sélectionnez une source pour ajouter une image :</string>
    <string name="picture_app">Appareil Photo</string>
    <string name="gallery">Galerie</string>
    <string name="back">Retour</string>
    <string name="find_tree">Trouve cet arbre !</string>
    <string name="max_points">/244</string>
    <string name="msg_defi">Tu viens de relever le défi du jour !</string>
    <string name="good_game">Réussite !</string>
    <string name="date_de_la_d_couverte">Date de la découverte</string>
    <string name="lieu_de_la_d_couverte">Lieu de la découverte</string>
    <string name="lieu">Lieu</string>
    <string name="enter_pseudo">Entrez votre pseudo</string>
    <string name="confirm_pseudo">Confirmer</string>
    <string name="modifier_mon_pseudo">Modifier mon pseudo</string>
    <string name="modifier_ma_photo">Modifier ma photo</string>
</resources>
