<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="fr.wildcodeschool.variadis.ProfilActivity">

    <include
        android:id="@+id/bottom_nav"
        layout="@layout/bottom_menu" />

    <TextView
        android:id="@+id/my_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/mon_profil"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_profil"
        app:srcCompat="@drawable/camera" />

    <EditText
        android:id="@+id/edit_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:fontFamily="@font/philosopher"
        android:hint="@string/nom_pseudo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/text_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/points"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pseudo" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <Button
        android:id="@+id/btn_ok_pseudo"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="49dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:background="@null"
        android:text="@string/ok"
        app:layout_constraintStart_toEndOf="@+id/edit_pseudo"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="170dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_points">

        <ImageView
            android:id="@+id/img_badge1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/bourgeon"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="413dp" />

        <ImageView
            android:id="@+id/img_badge3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/branche"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="413dp" />

        <ImageView
            android:id="@+id/img_badge2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/feuille"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="420dp" />

        <ImageView
            android:id="@+id/img_badge4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/arbre_un"
            tools:layout_editor_absoluteX="334dp"
            tools:layout_editor_absoluteY="350dp" />

        <ImageView
            android:id="@+id/img_badge5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/arbre_deux"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="106dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
